--- a/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
+++ b/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "axios": "1.4.0",
     "bootstrap": "5.2.3",
     "react": "18.2.0",
