--- a/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
+++ b/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
@@ -10,7 +10,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.44.2",
     "react-router-dom": "6.11.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
