--- a/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
+++ b/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@popperjs/core": "^2.11.8",
     "axios": "1.4.0",
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.44.2",
