--- a/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
+++ b/Entregas/Trabajos Practicos/ISW_TP_6/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
     "axios": "1.4.0",
     "bootstrap": "^5.2.3",
